# PHD2-Badge

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  test.py
phd_badge/: __init__.py  __main__.py
phd_badge/cli/: __init__.py  cli.py  run.py
phd_badge/modules/: __init__.py  abc.py
phd_badge/modules/matrix/: __init__.py  module.py
phd_badge/modules/snake/: __init__.py  constants.py  module.py  units.py
phd_badge/modules/text/: __init__.py  module.py  words.py
phd_badge/schemas/: pixel.py
